; ModuleID = '/home/carl/AnghaBench/openssl/ssl/extr_ssl_rsa.c_serverinfo_srv_add_cb.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/extr_ssl_rsa.c_serverinfo_srv_add_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8**, i64*, i32*, i8*)* @serverinfo_srv_add_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @serverinfo_srv_add_cb(i32* %0, i32 %1, i8** %2, i64* %3, i32* %4, i8* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8**, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8** %2, i8*** %9, align 8
  store i64* %3, i64** %10, align 8
  store i32* %4, i32** %11, align 8
  store i8* %5, i8** %12, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load i8**, i8*** %9, align 8
  %16 = load i64*, i64** %10, align 8
  %17 = load i32*, i32** %11, align 8
  %18 = load i8*, i8** %12, align 8
  %19 = call i32 @serverinfoex_srv_add_cb(i32* %13, i32 %14, i32 0, i8** %15, i64* %16, i32* null, i32 0, i32* %17, i8* %18)
  ret i32 %19
}

declare dso_local i32 @serverinfoex_srv_add_cb(i32*, i32, i32, i8**, i64*, i32*, i32, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
